welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:43: error: Unmatched closing brace '}' ignored here
}
^